--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <div id="content">
 
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
+      <img src="images/transportation/transit.jpg" alt="transit">
 
+      <img src="images/garden.jpg" alt="transit">
+
+      <img src="images/transportation/camels-in-truck.jpg" alt="transit">
     </div>
   </div>
 </body>
