--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src="images/transportation/transit.jpg" alt="transit">
 
-      <img src="images/garden.jpg" alt="transit">
+      <img src="images/garden.jpg" alt="garden">
 
-      <img src="images/transportation/camels-in-truck.jpg" alt="transit">
+      <img src="images/transportation/camels-in-truck.jpg" alt="camels-in-truck">
     </div>
   </div>
 </body>
