--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src="images/transportation/transit.jpg" alt="transit">
 
+      <h4>Travel</h4> 
+
       <img src="images/garden.jpg" alt="garden">
 
       <img src="images/transportation/camels-in-truck.jpg" alt="camels-in-truck">
