--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src="images/transportation/transit.jpg" alt="transit">
 
-      <h4>Travel</h4> 
+      <h4>Travel</h4>
+
+      <h4>Travel</h4>
 
       <img src="images/garden.jpg" alt="garden">
 
       <img src="images/transportation/camels-in-truck.jpg" alt="camels-in-truck">
+
+      <h4>Sources</h4>
+      <p>Lonely Planet</p>
+      <p>Wikipedia</p>
     </div>
   </div>
 </body>
