--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
       <h4>Travel</h4>
 
+      <p>Once a mudbrick waystation along dessert trading routes. Riyadh is now one of the wealthiest cities in the world.</p>
+      <p>The country's political, financial and administrative capital is also a city with a fascinating subtext.</p>
+
       <h4>History</h4>
 
       <img src="images/garden.jpg" alt="garden">
