--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <img src="images/transportation/camels-in-truck.jpg" alt="Riyadh camels">
 
       <h4>Sources</h4>
-      <p>Lonely Planet</p>
-      <p>Wikipedia</p>
+      <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh" target="_blank">Lonely Planet</a><br>
+      <a href="http://en.wikipedia.org/wiki/Riyadh" target="_blank">Wikipedia</a>
     </div>
   </div>
 </body>
